--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "create-react-app": "^1.2.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
