--- a/front/package.json
+++ b/front/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.21.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "immer": "^9.0.15",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
