--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-slide-routes": "^2.0.0",
+    "react-spinners": "^0.12.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
