--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.1161.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3"
   }
