--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "nft_project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
