--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,12 @@
     "antd": "^4.21.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "caver-js": "^1.8.2",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "immer": "^9.0.15",
     "react": "^18.1.0",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-draggable": "^4.4.5",
@@ -29,13 +33,16 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.5",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
