--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-draggable": "^4.4.5",
+    "react-intersection-observer": "^9.3.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
