--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ipfs-api": "^17.5.0",
     "ipfs-http-client": "^55.0.0",
     "js-ipfs": "^0.0.301",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux-devtools-extension": "^2.13.9",
