--- a/back/package.json
+++ b/back/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3"
   }
 }
