--- a/front/package.json
+++ b/front/package.json
@@ -15,8 +15,10 @@
     "bootstrap": "^5.1.3",
     "caver-js": "^1.8.2",
     "crypto-browserify": "^3.12.0",
+    "glob": "^8.0.3",
     "https-browserify": "^1.0.0",
     "immer": "^9.0.15",
+    "path": "^0.12.7",
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.4.0",
